5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1758_762.log
== TEST (2019-05-29 23:29:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2])"10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- ERROR:
File "XXXX", line 7
    mm = int(v[2])"10 + int(v[3])-1
                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:27) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2])"10 + int(v[3])-1"
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- ERROR:
File "XXXX", line 7
    mm = int(v[2])"10 + int(v[3])-1"
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:30:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2])10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- EXECUTION TIME:
0.168245
-- ERROR:
  File "/home/codebench/codes/1758/762/main.py", line 7
    mm = int(v[2])10 + int(v[3])-1
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2])10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- ERROR:
File "XXXX", line 7
    mm = int(v[2])10 + int(v[3])-1
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:30:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2]) + int(v[3])
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- EXECUTION TIME:
0.543402
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de marco de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de agosto de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de setembro de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:30:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2]) + int(v[3])
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:30:58) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2]) + int(v[3])
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- EXECUTION TIME:
0.424896
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de marco de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de agosto de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de setembro de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:32:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2])+10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:32:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2])+10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- EXECUTION TIME:
0.466336
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de dezembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:

-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:32:53) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2]) 10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- ERROR:
File "XXXX", line 7
    mm = int(v[2]) 10 + int(v[3])-1
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:33:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2]) - 10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:33:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2]) - 10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- EXECUTION TIME:
0.476865
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de abril de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de setembro de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de outubro de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:34:27) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

v =input("digite algo: ")
dd = v[0] + v[1]
mm = int(v[2])* 10 + int(v[3])-1
b = v[4] + v[5] + v[6]+v[7]
print(dd, "de", vet_mes[mm], "de", b)
-- EXECUTION TIME:
0.495995
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
